--- a/AUTHORS
+++ b/AUTHORS
@@ -1,13 +1,18 @@
-# Maintainer 
+# Maintainer
 
 * Salomon Sickert
+* Tobias Meggendorfer
 
 # Contributors
+
+* Guillermo A. Perez
+* Christopher Ziegler
+* Florian Barta
+* Matthias Franze
+
+# Honorable mentions (previous versions)
 
 * Andreas Gaiser
 * Jan Kretinsky
 * Zuzana Komarkova
 * Ruslan Ledesma-Garza
-* Christopher Ziegler
-* Tobias Meggendorfer
-* Florian Barta
