Added new determinization construction (nbadet) and multiple simulations for NBA

--- a/AUTHORS
+++ b/AUTHORS
@@ -10,6 +10,8 @@
 * Christopher Ziegler
 * Florian Barta
 * Matthias Franze
+* Anton Pirogov
+* León Bohn
 
 # Honorable mentions (previous versions)
 
